--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,9 +22,9 @@ jobs:
       - name: Validate Environment Input
         id: validate
         run: |
-          VALID_ENVIRONMENTS=$(awk '/awsAccounts:/{flag=1;next}/type/{flag=0}flag' .github/environments.yaml | sed 's/- //g' | tr '\n' ' ')
+          VALID_ENVIRONMENTS=$(awk '/awsAccounts:/{flag=1;next}/type/{flag=0}flag' .github/environments.yaml | sed 's/- //g' | tr '\n' ' ' | tr '[:upper:]' '[:lower:]')
           
-          INPUT_ENVIRONMENT="${{ github.event.inputs.environment }}"
+          INPUT_ENVIRONMENT=$(echo "${{ github.event.inputs.environment }}" | tr '[:upper:]' '[:lower:]')
        
           VALID_ENVIRONMENTS_ARRAY=($VALID_ENVIRONMENTS)
           
@@ -46,19 +46,19 @@ jobs:
       - name: Extract Environment URL
         id: extract_url
         run: |
-          environment="${{ steps.validate.outputs.environment }}"
+          environment=$(echo "${{ steps.validate.outputs.environment }}" | tr '[:upper:]' '[:lower:]')
           
           if [[ "$environment" == *"prod-live"* ]]; then
-            url=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
+            url=$(awk -F": " '/lob-prod :/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
             echo "AEM_HOST=$url" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST::$url"
           elif [[ "$environment" == *"prod"* ]] && [[ "$environment" != *"live"* ]]; then
-            url1=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
-            url2=$(awk -F": " '/Lob-Prod-preview:/{print $2}' .github/env_urls.yaml)
+            url1=$(awk -F": " '/lob-prod :/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
+            url2=$(awk -F": " '/lob-prod-preview:/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
             echo "AEM_HOST=$url1,$url2" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST::$url1,$url2"
           else
-            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} $1 ~ "^ *"env"$" {gsub(/^ *| *$/, "", $2); print $2}' .github/env_urls.yaml)
+            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
             if [ -z "$url" ]; then
               echo "Invalid environment: $environment"
               exit 1
