--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,18 +47,22 @@ jobs:
         id: extract_url
         run: |
           environment=$(echo "${{ steps.validate.outputs.environment }}" | tr '[:upper:]' '[:lower:]')
-          
+          echo "Extracting URL for environment: $environment" # Debugging step
+
           if [[ "$environment" == *"prod-live"* ]]; then
-            url=$(awk -F": " '/lob-prod :/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
+            url=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
+            echo "Prod-live environment detected, URL: $url" # Debugging step
             echo "AEM_HOST=$url" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST::$url"
           elif [[ "$environment" == *"prod"* ]] && [[ "$environment" != *"live"* ]]; then
-            url1=$(awk -F": " '/lob-prod :/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
-            url2=$(awk -F": " '/lob-prod-preview:/{print $2}' .github/env_urls.yaml | tr '[:upper:]' '[:lower:]')
+            url1=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
+            url2=$(awk -F": " '/Lob-Prod-preview:/{print $2}' .github/env_urls.yaml)
+            echo "Prod environment detected, URLs: $url1, $url2" # Debugging step
             echo "AEM_HOST=$url1,$url2" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST::$url1,$url2"
           else
             url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
+            echo "General environment detected, URL: $url" # Debugging step
             if [ -z "$url" ]; then
               echo "Invalid environment: $environment"
               exit 1
