--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -12,7 +12,8 @@ jobs:
   validate-and-deploy:
     runs-on: rhel999
     outputs:
-      AEM_HOST: ${{ steps.extract_url.outputs.AEM_HOST }}
+      AEM_AUTHOR_URL: ${{ steps.extract_url.outputs.AEM_AUTHOR_URL }}
+      AEM_PREVIEW_URL: ${{ steps.extract_url.outputs.AEM_PREVIEW_URL }}
       AEM_CREDENTIALS: ${{ steps.set-credentials.outputs.AEM_CREDENTIALS }}
       AEM_PACKAGE_NAME: ${{ steps.set-package-name.outputs.AEM_PACKAGE_NAME }}
     steps:
@@ -50,25 +51,34 @@ jobs:
           echo "Extracting URL for environment: $environment" # Debugging step
 
           if [[ "$environment" == *"prod-live"* ]]; then
-            url=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
-            echo "Prod-live environment detected, URL: $url" # Debugging step
-            echo "AEM_HOST=$url" >> $GITHUB_ENV
-            echo "::set-output name=AEM_HOST::$url"
+            author_url=$(awk -F": " '/ess-prod:/{print $2}' .github/env_urls.yaml)
+            preview_url=""
+            echo "Prod-live environment detected, Author URL: $author_url, No Preview URL" # Debugging step
+            echo "AEM_AUTHOR_URL=$author_url" >> $GITHUB_ENV
+            echo "AEM_PREVIEW_URL=$preview_url" >> $GITHUB_ENV
+            echo "::set-output name=AEM_AUTHOR_URL::$author_url"
+            echo "::set-output name=AEM_PREVIEW_URL::$preview_url"
           elif [[ "$environment" == *"prod"* ]] && [[ "$environment" != *"live"* ]]; then
-            url1=$(awk -F": " '/Lob-Prod :/{print $2}' .github/env_urls.yaml)
-            url2=$(awk -F": " '/Lob-Prod-preview:/{print $2}' .github/env_urls.yaml)
-            echo "Prod environment detected, URLs: $url1, $url2" # Debugging step
-            echo "AEM_HOST=$url1,$url2" >> $GITHUB_ENV
-            echo "::set-output name=AEM_HOST::$url1,$url2"
+            author_url=$(awk -F": " '/ess-prod:/{print $2}' .github/env_urls.yaml)
+            preview_url=$(awk -F": " '/ess-prod-preview:/{print $2}' .github/env_urls.yaml)
+            echo "Prod environment detected, Author URL: $author_url, Preview URL: $preview_url" # Debugging step
+            echo "AEM_AUTHOR_URL=$author_url" >> $GITHUB_ENV
+            echo "AEM_PREVIEW_URL=$preview_url" >> $GITHUB_ENV
+            echo "::set-output name=AEM_AUTHOR_URL::$author_url"
+            echo "::set-output name=AEM_PREVIEW_URL::$preview_url"
           else
             url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
+            author_url=$url
+            preview_url=""
             echo "General environment detected, URL: $url" # Debugging step
             if [ -z "$url" ]; then
               echo "Invalid environment: $environment"
               exit 1
             fi
-            echo "AEM_HOST=$url" >> $GITHUB_ENV
-            echo "::set-output name=AEM_HOST::$url"
+            echo "AEM_AUTHOR_URL=$author_url" >> $GITHUB_ENV
+            echo "AEM_PREVIEW_URL=$preview_url" >> $GITHUB_ENV
+            echo "::set-output name=AEM_AUTHOR_URL::$author_url"
+            echo "::set-output name=AEM_PREVIEW_URL::$preview_url"
           fi
 
       - name: Set AEM Credentials
@@ -79,8 +89,10 @@ jobs:
         id: set-package-name
         run: echo "::set-output name=AEM_PACKAGE_NAME::we.retail.community.apps-1.11.84.zip"
 
-      - name: Check variable
-        run: echo $AEM_HOST
+      - name: Check variables
+        run: |
+          echo "AEM_AUTHOR_URL: $AEM_AUTHOR_URL"
+          echo "AEM_PREVIEW_URL: $AEM_PREVIEW_URL"
 
       - name: Upload package artifact
         uses: actions/upload-artifact@v2
@@ -94,4 +106,5 @@ jobs:
     with:
       AEM_CREDENTIALS: ${{ needs.validate-and-deploy.outputs.AEM_CREDENTIALS }}
       AEM_PACKAGE_NAME: ${{ needs.validate-and-deploy.outputs.AEM_PACKAGE_NAME }}
-      AEM_HOST: ${{ needs.validate-and-deploy.outputs.AEM_HOST }}
+      AEM_AUTHOR_URL: ${{ needs.validate-and-deploy.outputs.AEM_AUTHOR_URL }}
+      AEM_PREVIEW_URL: ${{ needs.validate-and-deploy.outputs.AEM_PREVIEW_URL }}
