--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -44,6 +44,7 @@ jobs:
             echo "env_urls.yaml not found in the repository."
             exit 1
           fi
+          echo "Contents of env_urls.yaml:"
           cat .github/env_urls.yaml
 
       - name: Extract Environment URL
@@ -66,8 +67,10 @@ jobs:
             echo "::set-output name=AEM_HOST_AUTHOR::$url_author"
             echo "::set-output name=AEM_HOST_PREVIEW::$url_preview"
           else
-            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
-            echo "General environment detected, URL: $url" # Debugging step
+            echo "Attempting to extract URL for non-prod environment..."
+            awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} /dns_file:/ {next} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml
+            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} /dns_file:/ {next} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
+            echo "Extracted URL: $url" # Debugging step
             if [ -z "$url" ]; then
               echo "Invalid environment: $environment"
               exit 1
