--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   validate-and-deploy:
-    runs-on: RHEL8-01
+    runs-on: rhel999
     outputs:
       AEM_HOST: ${{ steps.extract_url.outputs.AEM_HOST }}
       AEM_HOST_AUTHOR: ${{ steps.extract_url.outputs.AEM_HOST_AUTHOR }}
@@ -24,13 +24,9 @@ jobs:
       - name: Validate Environment Input
         id: validate
         run: |
-          VALID_ENVIRONMENTS=$(awk '/awsAccounts:/{flag=1;next}/type/{flag=0}flag' .github/environments.yaml | sed 's/- //g' | tr '\n' ' ' | tr '[:upper:]' '[:lower:]')
-          
+          VALID_ENVIRONMENTS=("1eng" "1test" "1prod" "1loc" "ess-prod" "ess-prod-live")
           INPUT_ENVIRONMENT=$(echo "${{ github.event.inputs.environment }}" | tr '[:upper:]' '[:lower:]')
-       
-          VALID_ENVIRONMENTS_ARRAY=($VALID_ENVIRONMENTS)
-          
-          if [[ " ${VALID_ENVIRONMENTS_ARRAY[@]} " =~ " ${INPUT_ENVIRONMENT} " ]]; then
+          if [[ " ${VALID_ENVIRONMENTS[@]} " =~ " ${INPUT_ENVIRONMENT} " ]]; then
             echo "Environment input is valid: ${INPUT_ENVIRONMENT}"
             echo "environment=${INPUT_ENVIRONMENT}" >> $GITHUB_OUTPUT
           else
@@ -44,32 +40,27 @@ jobs:
             echo "env_urls.yaml not found in the repository."
             exit 1
           fi
-          echo "Contents of env_urls.yaml:"
-          cat .github/env_urls.yaml
 
       - name: Extract Environment URL
         id: extract_url
         run: |
-          environment=$(echo "${{ steps.validate.outputs.environment }}" | tr '[:upper:]' '[:lower:]')
-          echo "Extracting URL for environment: $environment" # Debugging step
-
+          environment=${{ steps.validate.outputs.environment }}
           if [[ "$environment" == *"prod-live"* ]]; then
             url=$(awk -F": " '/ess-prod:/{print $2}' .github/env_urls.yaml)
-            echo "Prod-live environment detected, URL: $url" # Debugging step
+            echo "Prod-live environment detected, URL: $url"
             echo "AEM_HOST_AUTHOR=$url" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST_AUTHOR::$url"
           elif [[ "$environment" == *"prod"* ]] && [[ "$environment" != *"live"* ]]; then
             url_author=$(awk -F": " '/ess-prod:/{print $2}' .github/env_urls.yaml)
             url_preview=$(awk -F": " '/ess-prod-preview:/{print $2}' .github/env_urls.yaml)
-            echo "Prod environment detected, URLs: $url_author, $url_preview" # Debugging step
+            echo "Prod environment detected, URLs: $url_author, $url_preview"
             echo "AEM_HOST_AUTHOR=$url_author" >> $GITHUB_ENV
             echo "AEM_HOST_PREVIEW=$url_preview" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST_AUTHOR::$url_author"
             echo "::set-output name=AEM_HOST_PREVIEW::$url_preview"
           else
-            echo "Attempting to extract URL for non-prod environment..."
-            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} /dns_file:/ {next} {if(tolower($1) == tolower(env)) {gsub(/^ *| *$/, "", $2); print $2}}' .github/env_urls.yaml)
-            echo "Extracted URL using awk: $url" # Debugging step
+            url=$(awk -v env="$environment" 'BEGIN {FS=": "; OFS=": "} $1 ~ "^ *"env"$" {gsub(/^ *| *$/, "", $2); print $2}' .github/env_urls.yaml)
+            echo "General environment detected, URL: $url"
             if [ -z "$url" ]; then
               echo "Invalid environment: $environment"
               exit 1
