--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,8 +35,6 @@ jobs:
             exit 1
           fi
 
-
-
       - name: Ensure env_urls.yaml is available
         run: |
           if [ ! -f .github/env_urls.yaml ]; then
@@ -48,15 +46,14 @@ jobs:
         id: extract_url
         run: |
           environment=${{ steps.validate.outputs.environment }}
-          lob=${{ steps.extract_lob.outputs.lob }}
           if [[ "$environment" == *"prod-live"* ]]; then
-            url=$(awk -v lob="$lob" -F": " '/^ *"lob"-prod:/{print $2}' .github/env_urls.yaml)
+            url=$(awk -v env="$environment" -F": " '$1 ~ "^ *"env"-prod$" {print $2}' .github/env_urls.yaml)
             echo "Prod-live environment detected, URL: $url"
             echo "AEM_HOST_AUTHOR=$url" >> $GITHUB_ENV
             echo "::set-output name=AEM_HOST_AUTHOR::$url"
           elif [[ "$environment" == *"prod"* ]] && [[ "$environment" != *"live"* ]]; then
-            url_author=$(awk -v lob="$lob" -F": " '/^ *"$environment":/{print $2}' .github/env_urls.yaml)
-            url_preview=$(awk -v lob="$lob" -F": " '/^ *"$environment"-preview:/{print $2}' .github/env_urls.yaml)
+            url_author=$(awk -v env="$environment" -F": " '$1 ~ "^ *"env"-prod$" {print $2}' .github/env_urls.yaml)
+            url_preview=$(awk -v env="$environment" -F": " '$1 ~ "^ *"env"-prod-preview$" {print $2}' .github/env_urls.yaml)
             echo "Prod environment detected, URLs: $url_author, $url_preview"
             echo "AEM_HOST_AUTHOR=$url_author" >> $GITHUB_ENV
             echo "AEM_HOST_PREVIEW=$url_preview" >> $GITHUB_ENV
